[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-template-linter"
version = "0.1.0"
description = "Parses a system prompt template string, finds {{placeholder}} patterns, counts instructions (lines starting with - or numbered), flags unsafe keywords (e"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Amarel Taylor Scott" }]
keywords = ["llm", "agents", "ai", "cli"]
dependencies = []

[tool.setuptools]
py-modules = ["prompt_linter"]
